tests/positive/Test28.sp
(***** Testing while ******* )
while      !(true) {
	if false {
	_ola:Double = 3; 
	return _ola;(*** comment *)
	}
}