tests/negative/Test2.sp
(* Testing semicolon is mandatory *)

while !true && 4 > true{

}